# studio

./: .gitignore  2023_03_29.py  2023_09_13.py  2024_01_19.md  README.md  lisp_2023_09_13.ipynb
sketch/: 2023_03_29.py
studio/: pyproject.toml
studio/studio/: media.py
sweetpea/: pyproject.toml
sweetpea/sweetpea/: expression.py  object.py  statement.py
tmp/: mml_2023_11_02.py
